# video-frame-extractor

./: .gitignore  README.md  build.py  main.py  pyproject.toml  requirements.txt
assets/: app.icns
packaging/: __init__.py  build_config.py  build_utils.py  linux_utils.py
src/: __init__.py
src/core/: __init__.py  video_processor.py
src/ui/: __init__.py  control_panel.py  export_dialog.py  main_window.py  playback_controls.py  video_widget.py
src/utils/: __init__.py  config_utils.py  file_utils.py  image_utils.py  ui_utils.py
